--- a/assignment2.html
+++ b/assignment2.html
@@ -12,7 +12,6 @@
 	<script src="js/coursera/webgl-utils.js"></script>
 	<script src="js/coursera/initShaders.js"></script>
 	<script src="js/coursera/MV.js"></script>
-	<script src="js/coursera/MV.js"></script>
 	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<!--<script src="js/spectrum-1.7.0/spectrum.js"></script>-->
@@ -50,9 +49,9 @@
 	});
 	</script>
 	<style>
-		* { margin:0; padding:0; } /* to remove the top and left whitespace */
-		html, body { width:100%; height:100%; } /* just to be sure these are full screen*/
-		canvas { display:block; } /* To remove the scrollbars */
+		* { margin:0; padding:0; }
+		html, body { width:100%; height:100%; }
+		canvas { display:block; }
 	</style>
 </head>
 <body>
