--- a/assignment3.html
+++ b/assignment3.html
@@ -93,6 +93,7 @@
 				<canvas id="gl-canvas" style="background:#ccc;border:1px solid black;margin: auto;" width="600" height="600">Oops ... your browser doesn't support the HTML5 canvas element</canvas>
 				</div>
 				<div id="camera-ctrl-block">
+					Camera: 
 					<div class="btn-group" role="group">
 						<div id="up" class="camera-ctrl-btn btn btn-default"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></div>
 						<div id="left" class="camera-ctrl-btn btn btn-default"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></div>
@@ -133,27 +134,27 @@
 				<div class="panel panel-default" id="edit-figure">
 					<div class="panel-heading">Edit figure</div>
 					<div class="panel-body">
-						<form id="options">
+						<form>
 							<div>
 								<input type="color" id="colorpicker" name="color">
 							</div>
 							<div>
 								<h4>Rotate:</h4>
-								<input type="range" name="width" min="-180" value="0" max="180" step="5" >
-								<input type="range" name="width" min="-180" value="0" max="180" step="5" >
-								<input type="range" name="width" min="-180" value="0" max="180" step="5" >
+								<input type="range" name="rotate_x" min="-180" value="0" max="180" step="5" >
+								<input type="range" name="rotate_y" min="-180" value="0" max="180" step="5" >
+								<input type="range" name="rotate_z" min="-180" value="0" max="180" step="5" >
 							</div>
 							<div>
 								<h4>Translate:</h4>
-								<input type="range" name="width" min="-1" value="0" max="1" step="0.1" >
-								<input type="range" name="width" min="-1" value="0" max="1" step="0.1" >
-								<input type="range" name="width" min="-1" value="0" max="1" step="0.1" >
+								<input type="range" name="translate_x" min="-1" value="0" max="1" step="0.1" >
+								<input type="range" name="translate_y" min="-1" value="0" max="1" step="0.1" >
+								<input type="range" name="translate_z" min="-1" value="0" max="1" step="0.1" >
 							</div>
 							<div>
 								<h4>Scale:</h4>
-								<input type="range" name="width" min="-1" value="0" max="1" step="0.1" >
-								<input type="range" name="width" min="-1" value="0" max="1" step="0.1" >
-								<input type="range" name="width" min="-1" value="0" max="1" step="0.1" >
+								<input type="range" name="scale_x" min="-1" value="0" max="1" step="0.1" >
+								<input type="range" name="scale_y" min="-1" value="0" max="1" step="0.1" >
+								<input type="range" name="scale_z" min="-1" value="0" max="1" step="0.1" >
 							</div>
 						</form>
 					</div>
