--- a/assignment4.html
+++ b/assignment4.html
@@ -88,7 +88,12 @@
 		if(lightEnabled2 != 0) {
 			lightColor2 = computeLightComponent(P, N, lightPosition2);
 		}
-		fColor = lightColor1 + lightColor2;
+		if(lightEnabled1 != 0 || lightEnabled2 != 0){
+			fColor = lightColor1 + lightColor2;
+		}
+		else {
+			fColor = vColor;
+		}
 
 	}
   </script>
